# RestaurantCommentValidation_Analysis

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  research_change.yml
.github/workflows/: ci.yml
dashboard/: app.py
data/gold/: primary_source_gold_candidates.parquet
data/reference/: qsr50_reference.csv  sec_filings_reference.csv
docs/: analyst-runbook.md  cli.md  data-dictionary.md  demo-walkthrough.md  forecast-ready-data.md  forecasting_experiments.md  local-workflow.md  model_candidates.md  monthly-gold-snapshot-checklist.md  rag-benchmark-authoring.md  rag-corpus-contract.md  rag_experiments.md  reference-evidence-backlog.md  release-runbook.md  security-privacy-controls.md
dvc/: dvc.yaml
mlflow/: mlflow_config.yaml
reports/reconciliation/: primary_source_coverage.md  primary_source_deltas.csv
scripts/: check_repo_hygiene.py
src/qsr_audit/: __init__.py  cli.py  config.py  demo.py  (+5 more)
tests/: helpers.py  test_cli_help.py  test_credibility.py  test_demo_happy_path.py  test_end_to_end_workflow.py  test_forecasting.py  test_gold_gating.py  test_makefile.py  test_models_stubs.py  test_primary_source_scaleup.py  test_qsr50_scaleup.py  test_rag.py  test_rag_benchmark_cycle.py  test_reconciliation.py  test_release_hardening.py  test_repo_hygiene.py  test_reporting.py  test_smoke.py  test_strategy.py  test_syntheticness.py  test_syntheticness_benchmark.py  test_workbook_ingestion.py  test_workbook_validation.py
(+63 files in other folders)
